# bitvector

./: .gitignore  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml  python-pytest-37.yml  python-pytest.yml  release.yaml
bitvector/: __init__.py  bitfield.py  bitvector.py
src/bitvector/: __init__.py
tests/: conftest.py  test_bitfield.py  test_bitvector_add.py  test_bitvector_bitwise.py  test_bitvector_comparisons.py  test_bitvector_create.py  test_bitvector_display.py  test_bitvector_floordiv.py  test_bitvector_methods.py  test_bitvector_mul.py  test_bitvector_packaging.py  test_bitvector_sequence.py  test_bitvector_shift.py  test_bitvector_sub.py  test_bitvector_truediv.py
