[tool.poetry]
name = "bitvector-for-humans"
version = "0.4.0"
description = "A simple bit vector class for Humans™."
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
packages = [ {include = "bitvector" }, {include = "bitvector/**/*.py"},]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
