[tool.poetry]
name = "bitvector-for-humans"
version = "0.11.0"
description = "A simple pure python Bit Vector class for Humans™."
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JnyJny/bitvector.git"
packages = [ {include = "bitvector" } ]

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pytest-coverage = "^0.0"
coverage = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
