[project]
name = "bitvector-for-humans"
version = "0.14.2"
description = "A simple pure python Bit Vector class for Humans™."
readme = "README.md"
authors = [
    { name = "JnyJny", email = "erik.oshaughnessy@gmail.com" }
]
repository = "https://github.com/JnyJny/bitvector.git"
requires-python = ">=3.9"
dependencies = []

[tool.poe.tasks]

# testing

_generate_coverage = "pytest --cov=./bitvector --cov-report=html"
_open_report = "open htmlcov/index.html"
coverage = [ "_generate_coverage", "_open_report"]

mypy = "mypy --config-file pyproject.toml bitvector"

# requirements

requirements = [
 { cmd = "uv -q export --output-file requirements.txt" },
 { cmd = "git add requirements.txt" },
 { cmd = "git commit -m 'requirements.txt updated from uv.lock'"},
]

# update version in pyproject

_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

# add, commit, tag and commit pyproject updated by bump

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = { shell = "git tag v`uv version --short`" }
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

publish_patch= ["_patch_bump", "_update_pyproject"]
publish_minor= ["_minor_bump", "_update_pyproject"]
publish_major= ["_major_bump", "_update_pyproject"]

publish = {ref = "publish_patch"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "bitvector" ] 

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["fast: fast tests", "slow: slow tests"]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "coverage>=7.2.7",
    "isort>=5.11.5",
    "mypy>=1.4.1",
    "poethepoet>=0.19.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
]

